--- a/views/harid.ejs
+++ b/views/harid.ejs
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reja</title>
-    <link rel="stylesheet" href="https://stackpath.bootsrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-    integrity="sha384-GJzZqFGwb1QTTB6wy59ffF1BuGJpLSa9DkKMp0Dm4iYMj70gZWKYbi706tWS"
-    crossorigin="anonymous"/>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
 </head>
 <body style="background-color: #b8bbd1;">
     <div class="container">
