B: A task nixoyat bajarildi

--- a/public/main.css
+++ b/public/main.css
@@ -38,6 +38,169 @@
 
 }
 
+.main_frame .midd_frame .mid_top {
+position: relative;
+width: 971px;
+height: 454.33px;
+/* White */
+background: rgb(255, 255, 255);   
+}
+
+.main_frame .mid_top .icons_top {
+    display: flex;
+}
+
+.main_frame .mid_top .icon_yel-1 {
+position: relative;
+margin-top: 45.86px;
+margin-left: 42.05px;
+width: 16.02px;
+height: 15.57px; 
+box-sizing: border-box;
+border: 2px solid rgba(255, 180, 0, 0.8);   
+}
+
+.main_frame .mid_top .icon_yel-2 {
+position: relative;
+margin-top: 386.33px;
+margin-left: 560.45px;
+width: 16.02px;
+height: 15.57px; 
+box-sizing: border-box;
+border: 2px solid rgba(255, 180, 0, 0.8);    
+
+}
+
+.main_frame .mid_top .icon_grean_1 {
+position: relative;
+margin-top: 427.22px;
+margin-left: 90.1px;
+width: 16.02px;
+height: 15.57px;  
+box-sizing: border-box;
+border: 2px solid rgba(5, 255, 0, 0.8);  
+}
+
+.main_frame .mid_top .icon_grean_2 {
+position: relative;
+margin-top: 67.26px;
+margin-left: 522.55px;
+width: 16.02px;
+height: 15.57px; 
+box-sizing: border-box;
+border: 2px solid rgba(5, 255, 0, 0.8);   
+}
+
+.main_frame .mid_top .icon_cub_b {
+position: relative;
+margin-top: 338.69px;
+margin-left: 376.4px;
+width: 15.93px;
+height: 15.65px; 
+box-sizing: border-box;
+border: 2px solid rgba(0, 71, 255, 0.8);   
+}
+
+.main_frame .mid_top .icon_cub_y {
+position: relative;
+margin-top: 84.4px;
+margin-right: 51.2px;
+width: 15.93px;
+height: 15.65px; 
+box-sizing: border-box;
+border: 2px solid rgba(255, 180, 0, 0.8);  
+}
+
+.main_frame .mid_top .icon_triangle {
+position: relative;
+margin-right: 10.98px;
+margin-bottom: 6.67px;
+width: 16.02px;
+height: 15.57px; 
+position: absolute;
+width: 16.02px;
+height: 15.57px;   
+}
+
+.main_frame .mid_top .top_left {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.main_frame .top_left .profession {
+position: relative;
+width: 499.51px;
+height: 116.74px; 
+color: rgb(43, 43, 43);
+font-family: Inter;
+font-size: 48px;
+font-weight: 700;
+line-height: 123.6%;
+letter-spacing: 0%;
+text-align: left;   
+}
+
+.main_frame .top_left .info {
+position: relative;
+width: 424.44px;
+height: 85.61px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+}
+
+.main_frame .top_left .button {
+/* Button/Book Me */
+position: static;
+width: 154px;
+height: 51px;
+/* Auto layout */
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+gap: 10;
+padding: 16px 32px 16px 32px;
+
+
+/* Inside Auto Layout */
+flex: none;
+order: 0;
+flex-grow: 0;
+margin: 0px 0px;  
+border-radius: 5px;
+
+/* Yellow */
+background: rgb(255, 180, 0);  
+}
+
+.main_frame .button .vector {
+position: relative;
+margin-left: 4.81px;
+width: 10.67px;
+height: 10.37px;    
+/* Black */
+color:black;
+}
+
+.main_frame .mid_top .top_right {
+position: relative;
+margin:12px, 73.94px, 0px, 571px;
+width: 326.06px;
+height: 446.63px;    
+
+}
+
+
+
+
 .main_frame .right_frame {
     position: relative;
     width: 108px;
@@ -60,7 +223,7 @@
     justify-content: center;
     align-items: center;
 
-    background-color: aqua;
+    
 }
 
 .main_frame .left_1 .left_1-1 {
@@ -73,6 +236,72 @@
   margin-bottom: 29.46px;
 
 }
+
+.main_frame .left_1 .left_1-2 {
+  
+position: relative;
+width: 64px;
+height: 20.85px;
+margin-bottom: 6.65px;
+font-family: sans-serif;
+font-style: normal;
+line-height: 123.6%;
+display: flex;
+justify-content: center;
+align-items: center;
+text-transform: capitalize;
+color: #2B2B2B;
+}
+
+.main_frame .left_1 .left_1-3 {
+    position: relative;
+    width: 147.84px;
+    height: 25.65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: sans-serif;
+    font-style: normal;
+    font-size: 15px;
+    font-weight: normal;
+    line-height: 24px;
+    text-transform: capitalize;
+    color: rgb(118, 118, 118);
+}
+
+.main_frame .left_1 .left_1_icons {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 238px;
+    margin-top: 19px;
+}
+
+.main_frame .left_1 .link_href {
+    text-decoration: none;
+    color: black;
+}
+
+.main_frame .left_1 .icon {
+    position: relative;
+    width: 24.99px;
+    height: 22.8px;
+    border-radius: 50%;
+    filter: drop-shadow(0 4px 4px rgba(0,0,0,.25));
+    background: #ffb400;
+}
+
+.main_frame .left_1 .icon-1 {
+    position: relative;
+    left: 29.17%;
+    right: 27.08%;
+    margin-top: 5.86px;
+
+}
+
+
 
 .main_frame .marginer {
     position: relative;
@@ -89,21 +318,287 @@
     position: relative;
     width: 221px;
     height: 126px;
-
+    align-items: center;
     margin-left: 44px;
 
-        background-color: aqua;
+    
 }
+
+.main_frame .left_2 .age {
+    /* Age: */
+position: relative;
+width: 221px;
+height: 25px;
+ display: flex;
+  flex-direction: row;
+  justify-content: space-between; 
+}
+
+.main_frame .age .Age_write {
+   /* Rectangle 2 */
+position: relative;
+width: 46.21px;
+height: 24px;
+/* Yellow */
+background: rgb(255, 180, 0);
+}
+
+.main_frame .age .age_inport {
+    /* 24 */
+color: rgb(43, 43, 43);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: right;
+text-transform: capitalize;
+}
+
+.main_frame .left_2 .residance {
+    /* Residence */
+position: relative;
+width: 220px;
+height: 24px;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+
+
+.main_frame .residance .w_residance {
+    margin-top: 0.2px;
+   width: 89px;
+height: 24px; 
+color: rgb(43, 43, 43);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+background: rgb(255, 180, 0);
+}
+
+.main_frame .residance .residance_import {
+   
+position: relative;
+width: 21px;
+height: 24px;
+color: rgb(43, 43, 43);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: right;
+text-transform: capitalize;
+
+}
+
+.main_frame .left_2 .free {
+     margin-top: 2px;
+    position: relative;
+   
+    width: 220px;
+    height: 24px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.main_frame .free .freelance {
+    position: relative;
+width: 85px;
+height: 24px;
+/* Yellow */
+background: rgb(255, 180, 0);
+}
+
+.main_frame .free .avai {
+    color: rgb(126, 185, 66);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: right;
+text-transform: capitalize;
+}
+
+
+.main_frame .left_2 .adress {
+margin-top: 2px;
+    position: relative;
+width: 220px;
+height: 24px;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+
+.main_frame .adress .w_adress {
+position: relative;
+width: 75px;
+height: 24px;
+/* Yellow */
+background: rgb(255, 180, 0);
+}
+
+.main_frame .adress .adress_import {
+position: relative;
+width: 132px;
+height: 24px;
+color: rgb(43, 43, 43);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: right;
+text-transform: capitalize;
+}
+
 
 
 .main_frame .left_3 {
     position: relative;
     width: 220px;
     height: 153px;
-margin-top: 25px;
+    margin-top: 25px;
     margin-left: 45px;
     background-color: aqua;
 }
+
+.main_frame .left_3 .langs_top {
+position: relative;
+width: 95px;
+height: 22px;
+color: rgb(43, 43, 43);
+font-family: Inter;
+font-size: 18px;
+font-weight: 500;
+line-height: 123.6%;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+}
+
+.main_frame .left_3 .langs_1 {
+position: relative;
+width: 220px;
+height: 24px; 
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+
+
+.main_frame .langs_1 .lang_1_import {
+position: relative;
+width: 49px;
+height: 24px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;  
+}
+
+.main_frame .langs_1 .lang_1_level {
+position: relative;
+width: 38px;
+height: 24px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+}
+
+.main_frame .left_3 .langs_2 {
+position: relative;
+width: 219px;
+height: 24px;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+
+.main_frame .langs_2 .lang_2_import {
+position: relative;
+width: 51px;
+height: 24px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+}
+
+.main_frame .langs_2 .lang_2_level {
+position: relative;
+width: 31px;
+height: 24px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+}
+
+
+
+.main_frame .left_3 .langs_3 {
+position: relative;
+width: 219px;
+height: 24px;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+
+.main_frame .langs_3 .lang_3_import {
+position: relative;
+width: 57px;
+height: 24px; 
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+}
+
+.main_frame .langs_3 .lang_3_level {
+position: relative;
+width: 31px;
+height: 24px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+}
+
 
 .main_frame .left_4 {
     position: relative;
@@ -114,6 +609,209 @@ margin-top: 25px;
     background-color: aqua;
 }
 
+.main_frame .left_4 .skills {
+position: relative;
+width: 45px;
+height: 22px;
+color: rgb(43, 43, 43);
+font-family: Inter;
+font-size: 18px;
+font-weight: 500;
+line-height: 123.6%;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+}
+
+.main_frame .left_4 .skill_1 {
+position: relative;
+width: 220px;
+height: 24px;
+margin-bottom: 5px;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+
+.main_frame .skill_1 .skill_1_impot {
+position: relative;
+width: 34px;
+height: 24px; 
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+}
+
+.main_frame .skill_1 .skill_1_level{
+position: relative;
+width: 31px;
+height: 24px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;    
+} 
+
+.main_frame .left_4 .skill_2 {
+position: relative;
+width: 220px;
+height: 24px;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+
+.main_frame .skill_2 .skill_2_impot {
+/* CSS */
+position: relative;
+width: 31px;
+height: 24px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;    
+}
+
+.main_frame .skill_2 .skill_2_level {
+position: relative;
+width: 31px;
+height: 24px;  
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;  
+}
+
+.main_frame .left_4 .skill_3 {
+position: relative;
+width: 220px;
+height: 24px;
+display: flex;
+flex-direction: row; 
+justify-content: space-between;   
+}
+
+.main_frame .skill_3 .skill_3_impot {
+position: relative;
+width: 16px;
+height: 24px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;    
+}
+
+.main_frame .skill_3 .skill_3_level {
+position: relative;
+width: 31px;
+height: 24px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;    
+}
+
+.main_frame .left_4 .skill_4 {
+position: relative;
+width: 220px;
+height: 24px; 
+display: flex;
+flex-direction: row;
+justify-content: space-between;   
+}
+
+.main_frame .skill_4 .skill_4_impot {
+position: relative;
+width: 31px;
+height: 24px; 
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;  
+}
+
+.main_frame .skill_4 .skill_4_level {
+position: relative;
+width: 30px;
+height: 24px; 
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;   
+}
+
+.main_frame .left_4 .skill_5 {
+position: relative;
+width: 220px;
+height: 24px; 
+display: flex;
+flex-direction: row; 
+justify-content: space-between;  
+}
+
+.main_frame .skill_5 .skill_5_impot {
+position: relative;
+width: 78px;
+height: 24px; 
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;   
+}
+
+.main_frame .skill_5 .skill_5_level {
+position: relative;
+width: 31px;
+height: 24px; 
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;   
+}
+
+
+
 .main_frame .left_5 {
     position: relative;
     width: 186px;
@@ -122,4 +820,124 @@ margin-top: 25px;
     margin-left: 45px;
     background-color: aqua;
 }
+
+.main_frame .left_5 .extra_skills {
+position: relative;
+width: 94px;
+height: 22px;
+color: rgb(43, 43, 43);
+font-family: Inter;
+font-size: 18px;
+font-weight: 500;
+line-height: 123.6%;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;    
+}
+
+
+.main_frame .left_5 .extra_1 {
+position: relative;
+width: 186px;
+height: 24px; 
+display: flex;
+flex-direction: row;   
+}
+
+.main_frame .left_5 .icon_ex_1 {
+position: relative;
+width: 15px;
+height: 15px;
+left: 0%;
+margin-right:10px;
+}
+
+.main_frame .extra_1 .ex_import_1 {
+position: relative;
+width: 156px;
+height: 24px; 
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;   
+}
+
+.main_frame .left_5 .extra_2 {
+position: relative;
+width: 157px;
+height: 24px; 
+display: flex;
+flex-direction: row;   
+}
+
+.main_frame .extra_2 .ex_import_2 {
+position: relative;
+width: 127px;
+height: 24px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;    
+}
+
+.main_frame .left_5 .extra_3 {
+position: relative;
+width: 186px;
+height: 24px; 
+display: flex;
+flex-direction: row;   
+}
+
+.main_frame .extra_3 .ex_import_3 {
+position: relative;
+width: 156px;
+height: 24px; 
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;   
+}
+
+.main_frame .left_5 .extra_4 {
+position: relative;
+width: 139px;
+height: 24px;
+display: flex;
+flex-direction: row;    
+}
+
+.main_frame .extra_4  .ex_import_4 {
+position: relative;
+width: 109px;
+height: 24px;
+color: rgb(118, 118, 118);
+font-family: Inter;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;    
+}
+
+
+
+
+
+
+
+
+
 
