--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -28,12 +28,15 @@
                     style="flex: 1"
                     />
                     <button class="btn btn-primary" style="border-radius: 20px">
-                        Yangi Harid Qilish
+                        Yangi Reja Qo'shish
                     </button>
                 
                 </div>
             </form>
         </div>
+        <button id="clean-all"  class="btn-danger" style="border-radius: 20px">
+           Hamma Rejalarni O'chirish
+        </button>
     </div>
 
     
