--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -16,11 +16,11 @@
         <h1 class="diplay-4 text-center py-1">REJA VA MASHQLAR</h1>
 
         <div class="jumbotron p-3 shadow-sm">
-            <form  id="create-form" action="/create item" method="POST">
+            <form  id="create-form" action="/create-item" method="POST">
                 <div class="d-flex align-items-center">
                     <input 
                     id="create-field"
-                    name="item"
+                    name="reja"
                     autofocus
                     autocomplete="off"
                     class="form-control mr-3"
@@ -34,6 +34,28 @@
                 </div>
             </form>
         </div>
+
+         
+     
+         <ul id="item-list" class="list-group pb-5">
+            <% items.map(function(item) { %>
+              <li class="list-group-item list-group-item-info d-flex align-items-center justify-content-between">
+                <span class="item-text"><%=item.reja%></span>
+                <div>
+                    <button
+                         data-id="<%=item._id%>"
+                         class="edit-me btn btn-secondary btn-sm mr-1">
+                         O'zgarish
+                        </button>
+                    <button data-id="<%=item._id%>"
+                    class="delete-me btn btn-danger btn-sm">
+                    O'chirish
+                </button>
+                </div>
+            </li>
+             <% }) %>
+            
+         </ul>
         <button id="clean-all"  class="btn-danger" style="border-radius: 20px">
            Hamma Rejalarni O'chirish
         </button>
