--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -13,7 +13,7 @@
 </head>
 <body style="background-color: #b8bbd1;">
     <div class="container">
-        <h1 class="diplay-4 text-center py-1">REJA VA MASHQLAR</h1>
+        <h1 class="display-4 text-center py-1">REJA VA MASHQLAR</h1>
 
         <div class="jumbotron p-3 shadow-sm">
             <form  id="create-form" action="/create-item" method="POST">
@@ -60,7 +60,9 @@
            Hamma Rejalarni O'chirish
         </button>
     </div>
-
+     
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+     <script src="/browser.js"></script>
     
 </body>
 </html>
