--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -15,7 +15,7 @@
     <div class="container">
         <h1 class="display-4 text-center py-1">REJA VA MASHQLAR</h1>
 
-        <div class="jumbotron p-3 shadow-sm">
+        <div class="jumbotron p-3 shadow-sm" style="background-color: rgba(234, 247, 250, 0.925);" >
             <form  id="create-form" action="/create-item" method="POST">
                 <div class="d-flex align-items-center">
                     <input 
@@ -61,8 +61,9 @@
         </button>
     </div>
      
-      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
      <script src="/browser.js"></script>
+
     
 </body>
 </html>
